--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/Tbars84/pruebaD-hoteles-hays#readme",
   "dependencies": {
+    "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
-    "morgan": "^1.9.1",
-    "concurrently": "^4.1.0"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
