--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-rate-limit": "^3.4.1",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
